Found the average colour of the image and displayed the colour on the name tag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Real</string>
     <string name="click_action_text">click me</string>
+    <string name="add_action_text">add</string>
     <string name="greetng_text">Pawita es guapa!</string>
 </resources>
