--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Real</string>
     <string name="add_action_text">add</string>
+    <string name="sort_action_text">sort</string>
 </resources>
