- Created a cutomisable toolbar - Created add button and refresh button on a toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Real</string>
-    <string name="add_action_text">add</string>
+    <string name="add_action_text">+</string>
     <string name="sort_action_text">sort</string>
 </resources>
